--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Ignore configuration files that may contain sensitive information.
 sites/*/*settings*.php
+sites/contrib/*
 
 # Ignore paths that contain generated content.
 files/
