actualizo .env dc

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-PROJECT_NAME=voc
+PROJECT_NAME=voc.sedici
 
 MYSQL_ROOT_PASSWORD=password
 DB_NAME=auth
 DB_USER=drupal
 DB_PASSWORD=drupal
+
+DRUPAL_PORT=8080
