--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - '33061:3306'
 #    volumes:
 #         Para restaurar un dump, descomentar siguiente línea
-#      - ./mariadb-init:/docker-entrypoint-initdb.d # Place init .sql file(s) here.
+#      - ./data/mariadb-init:/docker-entrypoint-initdb.d # Place init .sql file(s) here.
 #      - /var/run/mysqld
 
   phpmyadmin:
@@ -41,12 +41,12 @@ services:
       DB_DRIVER: mysql
     volumes:
 #         Descomentar si se quiere montar el código de toda la app
-#     - .data/web:/var/www/html
+#     - ./data/web:/var/www/html
       - ./sites/all:/var/www/html/sites/all
       - ./settings_LOCAL.php:/var/www/html/sites/default/settings.php
 
     ports:
-      - '8080:80'
+      - '$DRUPAL_PORT:80'
     depends_on:
       - mariadb
 
