Configuro para .env para voc.cic. Resta separar en código en sites/all

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,8 @@ services:
       DB_DRIVER: mysql
     volumes:
 #         Descomentar si se quiere montar el código de toda la app
-#     - ./data/web:/var/www/html
-      - ./sites/all:/var/www/html/sites/all
+      - ./data/web:/var/www/html
+#      - ./sites/all:/var/www/html/sites/all
       - ./settings_LOCAL.php:/var/www/html/sites/default/settings.php
 
     ports:
