agrego linea para levantar dump

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
       MYSQL_PASSWORD: $DB_PASSWORD
     ports:
       - '33061:3306'
-#    volumes:
+    volumes:
 #         Para restaurar un dump, descomentar siguiente línea
-#      - ./data/mariadb-init:/docker-entrypoint-initdb.d # Place init .sql file(s) here.
+      - ./data/mariadb-init:/docker-entrypoint-initdb.d # Place init .sql file(s) here.
 #      - /var/run/mysqld
 
   phpmyadmin:
